--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,20 @@
 Package: survivalROC
-Version: 1.0.0
+Version: 1.0.1
 Date: 2006-04-27
 Title: Time-dependent ROC curve estimation from censored survival data
 Author: Patrick J. Heagerty <heagerty@u.washington.edu>, packaging by
         Paramita Saha <psaha@u.washignton.edu>
-Maintainer: Patrick J. Heagerty <heagerty@u.washington.edu>
-Depends: R (>= 1.6.1)
+Maintainer: ORPHANED
+Depends: R (>= 2.15.0)
 Description: Compute time-dependent ROC curve from censored survival
         data using Kaplan-Meier (KM) or Nearest Neighbor Estimation
         (NNE) method of Heagerty, Lumley & Pepe (Biometrics, Vol 56 No
         2, 2000, PP 337-344)
 License: GPL (>= 2)
-Packaged: 2012-10-29 08:59:54 UTC; ripley
+Packaged: 2013-01-10 17:09:36 UTC; ripley
 Repository: CRAN
-Date/Publication: 2012-10-29 08:59:54
+Date/Publication: 2013-01-11 07:47:30
+X-CRAN-Original-Maintainer: Patrick J. Heagerty
+        <heagerty@u.washington.edu>
+X-CRAN-Comment: Orphaned on 2013-01-11 as the maintainer never
+        converted it for namespaces and R 2.14.0
