--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,4 @@
-# Default NAMESPACE created by R
-# Remove the previous line if you edit this file
+useDynLib("survivalROC")
 
-# Export all names
-exportPattern(".")
+export(survivalROC, survivalROC.C)
+
