--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,5 @@
+# Remove the previous line if you edit this file
+
+# Export all names
+exportPattern(".")
 useDynLib("survivalROC")
-
-export(survivalROC, survivalROC.C)
-
